--- a/frontbkp.yaml
+++ b/frontbkp.yaml
@@ -20,12 +20,30 @@ spec:
     spec:
       containers:
         - name: avs-legitimacao
-          image: gcr.io/avs-legitimacao-dev/avs-legitimacao-angular-app:teste
+          image: imagem-front-avs
           imagePullPolicy: Always
           ports:
             - name: http
               containerPort: 80
               protocol: TCP
+          livenessProbe:
+            httpGet:
+              path: /
+              port: http
+            initialDelaySeconds: 120
+            periodSeconds: 10
+            timeoutSeconds: 10
+            successThreshold: 1
+            failureThreshold: 5
+          readinessProbe:
+            httpGet:
+              path: /
+              port: http
+            initialDelaySeconds: 60
+            periodSeconds: 10
+            timeoutSeconds: 10
+            successThreshold: 1
+            failureThreshold: 5
           resources:
             requests:
               cpu: "200m"
